portico: Use flex for quote boxes to ensure fix alignment issues.
The link at the bottom of quotes block were not properly aligned
on narrow devices. This fixes that issue.

--- a/static/styles/portico/landing_page.css
+++ b/static/styles/portico/landing_page.css
@@ -4278,6 +4278,8 @@ nav {
     border-radius: 1em;
     font-weight: 400;
     margin: 40px 5px;
+    display: flex;
+    flex-direction: column;
 
     a {
         color: hsl(0, 0%, 100%);
